unpackaged/main/default/objects/Additional_Service__c/Additional_Service__c.object-meta.xml
<CustomObject>
    <label>Additional Service</label>
    <nameField>
        <label>Additional Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>