unpackaged/main/default/objects/Additional_Service__c/fields/Additional_Net_Commission__c.field-meta.xml
<CustomField>
    <fullName>Additional_Net_Commission__c</fullName>
    <formula>IF(Rebate_Reduction_Points__c &gt; 0, New_Annual_Net_Commission__c -  Current_Net_Commission__c - Internal_Cost_Estimate__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Net Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>