unpackaged/main/default/objects/Additional_Service__c/fields/Alipay_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Alipay_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alipay Campaign</label>
    <type>Checkbox</type>
</CustomField>