unpackaged/main/default/objects/Additional_Service__c/fields/B2C_Training__c.field-meta.xml
<CustomField>
    <fullName>B2C_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Create a new B2C Consultancy if this box is ticked.</inlineHelpText>
    <label>B2C Training</label>
    <type>Checkbox</type>
</CustomField>