unpackaged/main/default/objects/Additional_Service__c/fields/Channel_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Channel_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Channel Marketing</label>
    <type>Checkbox</type>
</CustomField>