unpackaged/main/default/objects/Additional_Service__c/fields/China_Marketing_Workshop__c.field-meta.xml
<CustomField>
    <fullName>China_Marketing_Workshop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>China Marketing Workshop</label>
    <type>Checkbox</type>
</CustomField>