unpackaged/main/default/objects/Additional_Service__c/fields/Closing_Date_of_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date_of_Campaign__c</fullName>
    <label>Closing Date of Campaign</label>
    <type>Date</type>
</CustomField>