unpackaged/main/default/objects/Additional_Service__c/fields/CNY__c.field-meta.xml
<CustomField>
    <fullName>CNY__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Chinese New Year</inlineHelpText>
    <label>CNY</label>
    <type>Checkbox</type>
</CustomField>