unpackaged/main/default/objects/Additional_Service__c/fields/Current_Net_Commission__c.field-meta.xml
<CustomField>
    <fullName>Current_Net_Commission__c</fullName>
    <formula>Opportunity__r.TF_Annual_Net_Commission1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Net Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>