unpackaged/main/default/objects/Additional_Service__c/fields/Current_Rebate_of_GC__c.field-meta.xml
<CustomField>
    <fullName>Current_Rebate_of_GC__c</fullName>
    <formula>Opportunity__r.TF_Rebate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Rebate % of GC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>