unpackaged/main/default/objects/Additional_Service__c/fields/Golden_Week_Package_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Golden_Week_Package_Level_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Golden Week Package Level 1</label>
    <type>Checkbox</type>
</CustomField>