unpackaged/main/default/objects/Additional_Service__c/fields/Internal_Cost_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Internal_Cost_Estimate__c</fullName>
    <label>Internal Cost Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>