unpackaged/main/default/objects/Additional_Service__c/fields/Marketing_Consultancy__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consultancy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Consultancy</label>
    <type>Checkbox</type>
</CustomField>