unpackaged/main/default/objects/Additional_Service__c/fields/Merchant_Cost__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Cost__c</fullName>
    <formula>(Number_of_Participants__c * Per_Person_Rate__c) + Additional_Net_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>