unpackaged/main/default/objects/Additional_Service__c/fields/Middle_East_Indian_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Middle_East_Indian_Workshop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Middle East Indian Workshop</label>
    <type>Checkbox</type>
</CustomField>