unpackaged/main/default/objects/Additional_Service__c/fields/Mystery_Shopping_Program__c.field-meta.xml
<CustomField>
    <fullName>Mystery_Shopping_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mystery Shopping Program</label>
    <type>Checkbox</type>
</CustomField>