unpackaged/main/default/objects/Additional_Service__c/fields/New_Annual_Net_Commission__c.field-meta.xml
<CustomField>
    <fullName>New_Annual_Net_Commission__c</fullName>
    <formula>Current_Gross_Commission__c * Rebate_Reduction_Points__c + Current_Net_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Annual Net Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>