unpackaged/main/default/objects/Additional_Service__c/fields/Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Participants__c</fullName>
    <inlineHelpText>If flat rate is simply a flat fee then put &#39;1&#39; as the number of participants.</inlineHelpText>
    <label>Number of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>