unpackaged/main/default/objects/Additional_Service__c/fields/Ongoing_Support_Program__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Support_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ongoing Support Program</label>
    <type>Checkbox</type>
</CustomField>