unpackaged/main/default/objects/Additional_Service__c/fields/Owning_Country__c.field-meta.xml
<CustomField>
    <fullName>Owning_Country__c</fullName>
    <formula>Opportunity__r.Owning_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owning Country</label>
    <type>Text</type>
</CustomField>