unpackaged/main/default/objects/Additional_Service__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard - Europe</fullName>
            </value>
            <value>
                <fullName>Standard - UK</fullName>
            </value>
            <value>
                <fullName>Premium - Europe</fullName>
            </value>
            <value>
                <fullName>Premium - UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>