unpackaged/main/default/objects/Additional_Service__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Incremental Rebate</fullName>
            </value>
            <value>
                <fullName>Marketing Pot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>