unpackaged/main/default/objects/Additional_Service__c/fields/Per_Person_Rate__c.field-meta.xml
<CustomField>
    <fullName>Per_Person_Rate__c</fullName>
    <inlineHelpText>If simply a flat fee then put the total cost and &#39;1&#39; in the Number of Participants</inlineHelpText>
    <label>Per Person Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>