unpackaged/main/default/objects/Additional_Service__c/fields/Planet_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Planet_Ranking__c</fullName>
    <formula>Opportunity__r.Planet_Ranking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planet Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>