unpackaged/main/default/objects/Additional_Service__c/fields/Rebate_Reduction_Points__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Reduction_Points__c</fullName>
    <label>Rebate Reduction % Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>