unpackaged/main/default/objects/Additional_Service__c/fields/Start_Date_of_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_Campaign__c</fullName>
    <label>Start Date of Campaign</label>
    <type>Date</type>
</CustomField>