unpackaged/main/default/objects/Additional_Service__c/fields/Store_Management_Half_Day_Programs__c.field-meta.xml
<CustomField>
    <fullName>Store_Management_Half_Day_Programs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Management Half Day Programs</label>
    <type>Checkbox</type>
</CustomField>