unpackaged/main/default/objects/Additional_Service__c/fields/Store_Management_Program__c.field-meta.xml
<CustomField>
    <fullName>Store_Management_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Management Program</label>
    <type>Checkbox</type>
</CustomField>