unpackaged/main/default/objects/Additional_Service__c/fields/Store_Management_Sales_Training__c.field-meta.xml
<CustomField>
    <fullName>Store_Management_Sales_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Management Sales Training</label>
    <type>Checkbox</type>
</CustomField>