unpackaged/main/default/objects/Additional_Service__c/fields/Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Value__c</fullName>
    <formula>Per_Person_Rate__c  * Number_of_Participants__c - Internal_Cost_Estimate__c +  Additional_Net_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>