unpackaged/main/default/objects/Additional_Service__c/fields/Tour_Guide_Events__c.field-meta.xml
<CustomField>
    <fullName>Tour_Guide_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tour Guide Events</label>
    <type>Checkbox</type>
</CustomField>