unpackaged/main/default/objects/Additional_Service__c/fields/WeChat_Tour_Guide_Campaign__c.field-meta.xml
<CustomField>
    <fullName>WeChat_Tour_Guide_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WeChat Tour Guide Campaign</label>
    <type>Checkbox</type>
</CustomField>