unpackaged/main/default/objects/Additional_Service__c/recordTypes/B2C_Flat_Fee.recordType-meta.xml
<RecordType>
    <fullName>B2C_Flat_Fee</fullName>
    <active>true</active>
    <label>B2C Flat Fee</label>
</RecordType>