unpackaged/main/default/objects/Additional_Service__c/recordTypes/B2C_Rebate_Offset.recordType-meta.xml
<RecordType>
    <fullName>B2C_Rebate_Offset</fullName>
    <active>true</active>
    <label>B2C Rebate Offset</label>
</RecordType>