unpackaged/main/default/objects/Additional_Service__c/recordTypes/Ctrip.recordType-meta.xml
<RecordType>
    <fullName>Ctrip</fullName>
    <active>true</active>
    <label>Ctrip</label>
</RecordType>