unpackaged/main/default/objects/Additional_Service__c/recordTypes/Joint_Marketing.recordType-meta.xml
<RecordType>
    <fullName>Joint_Marketing</fullName>
    <active>true</active>
    <label>Joint Marketing</label>
</RecordType>