unpackaged/main/default/objects/Additional_Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Opportunity__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Merchant_Cost__c</columns>
    <columns>Rebate_Reduction_Points__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>