unpackaged/main/default/objects/Additional_Service__c/listViews/My_Additional_Services.listView-meta.xml
<ListView>
    <fullName>My_Additional_Services</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Additional_Net_Commission__c</columns>
    <columns>Income_Type__c</columns>
    <columns>Merchant_Cost__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Additional Services</label>
</ListView>