unpackaged/main/default/objects/Additional_Service__c/listViews/My_Open_Additional_Services.listView-meta.xml
<ListView>
    <fullName>My_Open_Additional_Services</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Additional_Net_Commission__c</columns>
    <columns>Income_Type__c</columns>
    <columns>Merchant_Cost__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Proposal Signed,Proposal Stopped,Proposal Lost</value>
    </filters>
    <label>My Open Additional Services</label>
</ListView>